welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:7: error: not found: value nomdelacase
 nomdelacase=litMessage()
 ^BDR2:9: error: not found: value nomdelacase
 nomdelacase  match{
 ^